[package]
name = "lox"
version = "0.5.0"
authors = ["Jhon Pedroza <jhon@pedroza.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
rustyline = "7.1.0"
ansi_term = "0.12"
uuid = { version = "0.8", features = ["v4"] }
